<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AKT_MMPD_26.9.16(NPT)</string>
    <string name="myanmar_padauk_logo">Myanmar Padauk Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_data_download">DataDownloadActivity</string>
    <string name="username_label">Username:</string>
    <string name="date_label">Date:</string>
    <string name="reissure">Reissue</string>
    <string name="upload_to_server">Upload to Server</string>
    <string name="customer">Customer</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="report">Report</string>
    <string name="title_activity_customer">CustomerActivity</string>
    <string name="search">Search</string>
    <string name="column">:</string>
    <string name="customer_name_label">Customer Name:</string>
    <string name="address_label">Address:</string>
    <string name="phone_label">Phone:</string>
    <string name="township_label">Township:</string>
    <string name="credit_terms_label">Credit Terms:</string>
    <string name="credit_limit_label">Credit Limit:</string>
    <string name="credit_amount_label">Credit Amount:</string>
    <string name="due_amount_label">Due Amount:</string>
    <string name="prepaid_amount_label">Prepaid Amount:</string>
    <string name="payment_type_label">Payment Type:</string>
    <string name="general_sale">General Sale</string>
    <string name="package_sale">Package Sale</string>

    <!-- For Data Download -->
    <string name="data_download">Data Download</string>
    <string name="download_again">Download Again</string>

    <!-- For Package Sale -->
    <string name="title_activity_package_sale">Package Sale</string>
    <string name="enter_amount">Enter amount</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Check Out</string>
    <string name="category_previous">&lt;</string>
    <string name="category_next">&gt;</string>
    <string name="sale_date">Sale Date:</string>
    <string name="product">Product</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="net_amount">Net Amount:</string>
    <string name="available_quantity">Available Quantity:</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_label">Quantity:</string>
    <string name="general_sale_checkout">General Sale - Checkout</string>
    <string name="serial">Serial</string>
    <string name="invoice_id">Invoice ID:</string>
    <string name="total_amount_">Total Amount:</string>
    <string name="discount_">Discount:</string>
    <string name="pay_amount">Pay Amount:</string>
    <string name="refund">Refund:</string>
    <string name="change_due_label">Change Due:</string>
    <string name="receipt_person">Receipt Person:</string>
    <string name="confirm_and_print">Confirm &amp; Print</string>

    <!-- For Package Sale Checkout -->
    <string name="title_activity_package_sale_checkout">PackageSaleCheckoutActivity</string>
    <string name="package_sale_checkout">Package Sale - Checkout</string>
    <string name="extra_discount_label">Extra Discount:</string>
    <string name="serial_setup">Serial Setup</string>
    <string name="number">No</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="from_label">From:</string>
    <string name="to_label">To:</string>
    <string name="title_activity_package_sale_print">PackageSalePrint</string>

    <!-- For Customer Feedback Dialog Box -->
    <string name="feedback">Feedback</string>
    <string name="feedback_label">Feedback:</string>
    <string name="remark_label">Remark:</string>
    <string name="title_activity_general_sale">GeneralSaleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_general_sale_checkout">GeneralSaleCheckoutActivity</string>
    <string name="title_activity_general_sale_print">GeneralSalePrintActivity</string>
    <string name="print">Print</string>
    <string name="sale_man_label">Sale Man:</string>
    <string name="branch_label">Branch:</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="home">Home</string>
    <string name="title_activity_report_home">ReportHomeActivity</string>

    <!-- For report home -->
    <string name="title_activity_add_new_customer">AddNewCustomerActivity</string>

    <string name="title_activity_delivery">Delivery</string>
</resources>
