<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:background="#D77E0F" >
        
        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:text="@string/cancel"
            android:background="#292321"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/print"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="@string/print"
            android:background="#292321"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/print"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textSize="23sp" />
    </RelativeLayout>
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:layout_margin="10dp">

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sale_date" />

	        <TextView
	            android:id="@+id/saleDate"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right">

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/invoice_id" />

			<TextView
			    android:id="@+id/invoiceId"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp" />
	    </LinearLayout>
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:baselineAligned="false"
	    android:layout_margin="10dp">

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1">

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sale_man_label" />

	        <TextView
	            android:id="@+id/saleMan"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp" />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="right">

			<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/branch_label" />

			<TextView
			    android:id="@+id/branch"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="5dp" />
	    </LinearLayout>
	</LinearLayout>

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent">
	    
	    <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="#898989">
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/product"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/qty"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/price"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            
            <TextView
                android:id="@+id/tableHeaderDiscount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/discount"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
            
            <TextView 
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/amount"
                android:textStyle="bold"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        
	    <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_margin="10dp">
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="@string/total_amount_"
                    android:gravity="right" />

                <TextView
                    android:id="@+id/totalAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="10000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:text="Prepaid Amount:"
                    android:gravity="right" />

                <TextView
                    android:id="@+id/prepaidAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_marginRight="10dp"
                    android:gravity="right"
                    android:text="10000" />
            </LinearLayout>
        </LinearLayout>

	    <ListView
            android:id="@+id/soldProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerLayout"
            android:layout_above="@id/resultLayout"
            android:layout_margin="10dp"
            android:padding="10dp" />
	</RelativeLayout>
</LinearLayout>
